# bot-test

React/: index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.js
React/src/: App.jsx  main.jsx
React/src/components/: AuthModal.jsx  ChatInput.jsx  ChatWindow.jsx  MessageBubble.jsx  Sidebar.jsx
backend/: README.md  chatbot.db  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routes/: auth.py  chat.py  users.py
backend/app/services/: chatbot.py  hf_client.py
